# c-git-version-example

./: .gitmodules  CMakeLists.txt  README.md
src/: main.c
